--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "simonhaefliger.ch",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
@@ -9,15 +10,13 @@
     "test": "xo && prettier --write ."
   },
   "devDependencies": {
-    "prettier": "^2.6.1",
-    "vite": "^2.9.0",
+    "prettier": "2.7.1",
+    "tufte-css": "^1.8.0",
+    "vite": "^3.0.0",
     "vite-plugin-handlebars": "^1.6.0",
-    "xo": "^0.48.0"
+    "xo": "^0.51.0"
   },
   "xo": {
-    "space": true,
-    "rules": {
-      "unicorn/prefer-module": "off"
-    }
+    "space": true
   }
 }
